--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+    servlet:
+     multipart:
+       max-file-size: 10MB
+       max-request-size: 100MB
     datasource:
         url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/subtly
         username: root
