--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,4 @@
 spring:
-    servlet:
-     multipart:
-       max-file-size: 10MB
-       max-request-size: 100MB
     datasource:
         url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/subtly
         username: root
@@ -15,3 +11,13 @@ spring:
                 dialect: org.hibernate.dialect.MySQLDialect
                 format_sql: true
         show-sql: true
+    servlet:
+        multipart:
+            enabled: true
+            max-file-size: -1
+            max-request-size: -1
+server:
+    tomcat:
+        max-swallow-size: -1
+        max-http-post-size: -1
+        max-http-form-post-size: -1
